Bug 107337 - [CI][DRMTIP] igt@kms_3d - fail - Failed assertion: debugfs_fd != -1 / Last errno: 2, No such file or directory
Summary: [CI][DRMTIP] igt@kms_3d - fail - Failed assertion: debugfs_fd != -1 / Last er...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: IGT (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-23 13:19 UTC by Martin Peres
Modified: 2019-02-22 13:48 UTC (History)
1 user (show)

See Also:
i915 platform: KBL
i915 features: display/Other


Attachments

Description Martin Peres 2018-07-23 13:19:56 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_87/fi-kbl-8809g/igt@kms_3d.html

(kms_3d:1401) igt_kms-CRITICAL: Test assertion failure function kmstest_force_edid, file ../lib/igt_kms.c:916:
(kms_3d:1401) igt_kms-CRITICAL: Failed assertion: debugfs_fd != -1
(kms_3d:1401) igt_kms-CRITICAL: Last errno: 2, No such file or directory
Test kms_3d failed.
Comment 1 Chris Wilson 2018-07-24 11:03:04 UTC
commit 9b064015df14506b23cd2d7245a73e1b1d16ee1f (HEAD, upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jul 23 14:35:09 2018 +0100

    lib: Don't assert all KMS drivers support edid_override
    
    edid_override is a i915.ko debugfs feature; just skip any kms test that
    depends on being able to override the edid.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=107337
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Katarzyna Dec <katarzyna.dec@intel.com>
Comment 2 Lakshmi 2018-08-24 10:59:11 UTC
Last seen 1 month ago. Closing this bug.
Comment 3 Lakshmi 2018-08-28 06:14:01 UTC
Last seen this issue a month ago, but this issue occurs in every round. This issue occurred 5 rounds ago.  To ensure its really fixed, we could wait for few more rounds. So reopening this issue again. But this doesn't mean that this needs fix.
Comment 4 Lakshmi 2019-02-22 12:45:13 UTC
Last seen on drmtip_89 (7 months, 1 week / 3656 runs ago). I assume this issue has been fixed. Closing this bug.
Comment 5 CI Bug Log 2019-02-22 13:48:40 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.