lib: Don't assert all KMS drivers support edid_override

edid_override is a i915.ko debugfs feature; just skip any kms test that
depends on being able to override the edid.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=107337
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Reviewed-by: Katarzyna Dec <katarzyna.dec@intel.com>